Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6235

sanity-scrub test_13 test failed to respond and timed out

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.7.0, Lustre 2.8.0
    • None
    • None
    • 3
    • 17471

      This issue was created by maloo for nasf <fan.yong@intel.com>

      Please provide additional information about the failure here.

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/278a9888-b1cc-11e4-9c8b-5254006e85c2.

      The logs on OST:

      LDISKFS-fs error (device dm-0): ldiskfs_lookup: 
      Lustre: lustre-OST0000: deleting orphan objects from 0x0:674 to 0x0:737
      deleted inode referenced: 331
      Aborting journal on device dm-0-8.
      LDISKFS-fs (dm-0): Remounting filesystem read-only
      LustreError: 27986:0:(ofd_dev.c:1594:ofd_create_hdl()) lustre-OST0000: Can't find FID Sequence 0x200000402: rc = -5
      LustreError: 27999:0:(ofd_dev.c:1509:ofd_orphans_destroy()) lustre-OST0000: error destroying precreated id [0x100000000:0x2e1:0x0]: rc = -30
      

            yong.fan nasf (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: